@@ -4,6 +4,8 @@
 	cd ~/nco;git commit -a -m 'Version 5.2.7-alpha02: Stroker';git push
 	git tag -a 5.2.7-alpha02 -m 'all: qnt lossy_compresion->quantization, dpr family';git push --tags
 
+	* Fix regrssion test that failed due to quantization being crd-like variable
+
 	* Deprecate "family" attribute from quantization container variable
 
 	* Migrate from container variable name from "lossy_compression" to "quantization"
